--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -2,10 +2,21 @@
 <div class="notification"></div>
 <div class="side">
   <div class="userprofile">
-
+    <div id="userprofile-photo">
+      <img src="">
+    </div>
+    <div id="userprofile-name">
+      <label></label>
+    </div>
+    <div id="userprofile-provider">
+      <a target="_blank" ></a>
+    </div>
   </div>
   <ul class="menu-list">
-    <li class="menu-subscrible">Subscrible</li>
+    <li class="menu-subscrible">
+      <label for="menu-subscrible-check">Subscrible</label>
+      <input type="checkbox" class="fa fa-toggle-off" id="menu-subscrible-check">
+    </li>
     <li class="menu-notification">Notification</li>
     <li class="menu-friend">Friend</li>
     <li class="menu-activity">Activity</li>
