Update side menu Notification Setting

--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -3,7 +3,7 @@
 <div class="side">
   <div class="userprofile">
     <div id="userprofile-photo">
-      <img src="">
+      <img src="/assets/launcher/96.png">
     </div>
     <div id="userprofile-name">
       <label></label>
@@ -13,13 +13,17 @@
     </div>
   </div>
   <ul class="menu-list">
-    <li class="menu-subscrible">
-      <label for="menu-subscrible-check">Subscrible</label>
-      <input type="checkbox" class="fa fa-toggle-off" id="menu-subscrible-check">
-    </li>
-    <li class="menu-notification">Notification</li>
+    <li class="menu-question">Quistion</li>
     <li class="menu-friend">Friend</li>
-    <li class="menu-activity">Activity</li>
+    <li class="menu-subscrible">
+      <label id="menu-subscrible-check" (click)="Subscrible()">Subscrible
+        <div class="fa fa-toggle-off"></div>
+      </label>
+    </li>
+    <li>
+      <label id="menu-notification-check" (click)="Notification()">Notification
+        <div class="fa fa-toggle-off"></div>
+      </label>
   </ul>
   <div class="signout">
       <label (click)="Signout()">Sign out</label>
@@ -29,6 +33,5 @@
     <div class="toggle-menu fa fa-bars "></div>
 </div>
 <div class="content">
-      <button (click)="Subscrible()">Subscrible</button>
-      <button (click)="Unsubscrible()">Unsubscrible</button>
+
 </div>
