--- a/src/app/views/home/home.component.css
+++ b/src/app/views/home/home.component.css
@@ -51,7 +51,6 @@
     display: block;
     width: 100%;
     height:110px;
-    box-shadow: 0.3px 0 0.5px 1px #a0a0a0;
 }
 .userprofile.google{
     background-image: url("/assets/images/google.jpg");
@@ -136,8 +135,8 @@
 .menu-list > li{
     margin-left: -20px;
     padding-left: 20px;
-    height: 40px;
-    line-height: 40px;
+    height: 50px;
+    line-height: 50px;
     border-bottom: 1px solid #999999;
 }
 
@@ -147,9 +146,27 @@
     padding-right: 20px;
     font-size: 1.1em;
     font-weight: 800;
+    cursor: pointer;
 }
-.menu-list > li > label + input{
+.menu-list > li > #menu-subscrible-check{
     font-size: 1.2em;
+}
+.menu-list > li > #menu-subscrible-check > div{
+    margin-left: 30px;
+}
+.menu-list > li > #menu-notification-check{
+    font-size: 1.2em;
+}
+.menu-list > li > #menu-notification-check > div{
+    margin-left: 20px;
+}
+
+.menu-list > li > #menu-subscrible-check > div.fa-toggle-on{
+    color: #993333;
+}
+
+.menu-list > li > #menu-notification-check > div.fa-toggle-on{
+    color: #993333;
 }
 
 .signout{
