--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -11,6 +11,7 @@
     <div id="userprofile-provider">
       <a target="_blank" ></a>
     </div>
+    <div class="fa fa-close side-hide" (click)="HideMenu()"></div>
   </div>
   <ul class="menu-list">
     <li class="menu-question">Quistion</li>
@@ -30,7 +31,7 @@
   </div>
 </div>
 <div class="navigation">
-    <div class="toggle-menu fa fa-bars "></div>
+    <div class="toggle-menu fa fa-bars " (click)="ShowMenu()"></div>
 </div>
 <div class="content">
 
