Update side menu animation update 2

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!--The whole content below can be removed with the new code.-->
-<div class="container">
+<div class="container" (window:resize)="onResize($event)">
   <router-outlet></router-outlet>
   </div>
 
