--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,7 +1,7 @@
 .container{
     margin: 0 auto;
     display: block;
-    /*max-width: 1000px;*/
+    max-width: 1000px;
     min-height: 600px;
     height:100vh;
 }
