--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -1,48 +1,3 @@
-<!--
-<div class="side">
-
-  <div class="userprofile">
-    <div id="userprofile-photo">
-      <img src="/assets/launcher/96.png">
-    </div>
-    <div id="userprofile-name">
-      <label></label>
-    </div>
-    <div id="userprofile-provider">
-      <a target="_blank" ></a>
-    </div>
-    <div class="fa fa-close side-hide" (click)="HideMenu()"></div>
-  </div>
-
-  <ul class="menu-list">
-    <li class="menu-question">Quistion</li>
-    <li class="menu-friend">Friend</li>
-    <li class="menu-subscrible">
-      <label id="menu-subscrible-check" (click)="Subscrible()">Subscrible
-        <div class="fa fa-toggle-off"></div>
-      </label>
-    </li>
-    <li>
-      <label id="menu-notification-check" (click)="Notification()">Notification
-        <div class="fa fa-toggle-off"></div>
-      </label>
-  </ul>
-
-  <div class="signout">
-      <label (click)="Signout()">Sign out</label>
-  </div>
-  
-</div>
-
-<div class="navigation">
-    <div class="toggle-menu fa fa-bars " (click)="ShowMenu()"></div>
-</div>
-<div class="content"></div>
-<div class="notification"></div>
--->
-
-
-
 <div class="side">
 
   <div class="userprofile">
@@ -60,15 +15,16 @@
 
 
   <ul class="menu-list">
-    <li class="menu-question">Quistion</li>
-    <li class="menu-friend">Friend</li>
+    <li class="menu-main menu" (click)="MainMenu()">หน้าหลัก</li>
+    <li class="menu-question menu" (click)="QuestionMenu()">ถามเพื่อน</li>
+    <li class="menu-friend menu" (click)="FriendMenu()">เพื่อน</li>
     <li class="menu-subscrible">
-      <label id="menu-subscrible-check" (click)="Subscrible()">Subscrible
+      <label id="menu-subscrible-check" (click)="Subscrible()">รับแจ้งเตือน miniHappy
         <div class="fa fa-toggle-off"></div>
       </label>
     </li>
     <li>
-      <label id="menu-notification-check" (click)="Notification()">Notification
+      <label id="menu-notification-check" (click)="Notification()">เรับแจ้งเตือนเพื่อน
         <div class="fa fa-toggle-off"></div>
       </label>
   </ul>
@@ -76,10 +32,72 @@
   <div class="signout">
       <label (click)="Signout()">Sign out</label>
   </div>
-      
+
 </div>
 <div class="navigation">
     <div class="toggle-menu fa fa-bars " (click)="ShowMenu()"></div>
+    <div class="title"></div>
 </div>
-<div class="content"></div>
+<div class="content">
+  <!--   START SHOW, HIDE VIEW BY MAIN MENU     -->
+
+
+  <div class="mainview none">Main</div>
+
+
+
+
+
+
+
+<div class="questionview none">
+  <div class="quest-topic">
+    <input type="text" placeholder="อยากถามว่า">
+    <div class="topic-send fa fa-paper-plane"></div>
+  </div>
+  <label class="quest-header fa fa-book"> รายการคำถาม</label>
+  <div class="quest-new">
+    <input type="text" placeholder="เพิ่มตัวเลือกคำตอบ">
+    <div class="topic-send fa fa-plus" (click)="AddNewQuest()"></div>
+  </div>  
+    <ul class="quest-list"></ul>
+
+
+
+
+
+
+</div>
+
+
+
+
+
+
+
+
+
+<div class="friendview none">Friend</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  <!--   END  SHOW, HIDE VIEW BY MAIN MENU     -->
+</div>
 <div class="notification"></div>
