--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -58,7 +58,7 @@
   <label class="quest-header fa fa-book"> รายการคำถาม</label>
   <div class="quest-new">
     <input type="text" placeholder="เพิ่มตัวเลือกคำตอบ">
-    <div class="topic-send fa fa-plus" (click)="AddNewQuest()"></div>
+    <div class="add-quest fa fa-plus" (click)="AddNewQuest()"></div>
   </div>  
     <ul class="quest-list"></ul>
 
@@ -77,7 +77,16 @@
 
 
 
-<div class="friendview none">Friend</div>
+<div class="friendview none">
+  <label class="friend-header fa fa-book"> เพื่อนที่มี</label>
+  <div class="friend-new">
+    <input type="text" placeholder="เพิ่มเพื่อน">
+    </div>  
+    <div class="previewp"></div>
+    <ul class="friend-list"></ul>
+
+
+</div>
 
 
 
